# ncs-sidewalk-demo-application

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
app/: CMakeLists.txt  Kconfig  overlay-cli-shell.conf  overlay-dut-nus.conf  overlay-dut.conf  overlay-hello-xiao-compare.conf  overlay-min-size.conf  overlay-prop-radio.conf  overlay-web-demo.conf  overlay-web-demo.overlay  pm_static_xiao_nrf54l15_nrf54l15_cpuapp_release.yml  prj.conf  sample.yaml
app/boards/: xiao_nrf54l15_nrf54l15_cpuapp.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay
app/include/: cloud_bridge.h  input_trigger.h  prop_radio.h  sidewalk.h  web_shell_ble.h
app/include/cli/: app_cli_ui.h  app_dut.h  app_shell.h
app/src/: cloud_bridge.c  input_trigger.c  prop_radio.c  sidewalk_events.c  web_shell_ble.c
app/src/cli/: app.c  app_cli_ui.c  app_dut.c  app_shell.c  prop_radio_shell.c
app/src/hello/: app.c
app/sysbuild/: CMakeLists.txt
app/sysbuild/configuration/xiao_nrf54l15_nrf54l15_cpuapp/: sysbuild.conf
app/sysbuild/mcuboot/boards/: xiao_nrf54l15_nrf54l15_cpuapp.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay
tools/web_demo/: .env.example  .gitignore  README.md  app.py  config.py  iot.py  railway.json  requirements.txt  sidewalk-web-demo.service.example  storage.py
tools/web_demo/firmware/: AODemo1.hex  AODemo2.hex
tools/web_demo/flasher/: flash_nrf54_cli.mjs  package-lock.json  package.json
tools/web_demo/static/: app.js  styles.css
tools/web_demo/templates/: admin.html  base.html  dashboard.html  login.html
zephyr/: patches.yml
(+1 files in other folders)
